--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "koa-router": "^4.2.0",
     "koa-static": "^1.4.9",
     "koa-views": "^2.1.2",
+    "mongoose": "^4.0.0-rc2",
+    "pg": "^4.2.0",
     "react": "^0.12.2",
-    "winston": "^0.9.0"
+    "winston": "^0.9.0",
+    "yargs": "^3.2.1"
   },
   "devDependencies": {
     "browserify": "^8.1.3",
