--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hawk",
   "version": "0.0.1",
-  "description": "Watch your favorite bands like a hawk",
+  "description": "Watch your favorite bands like a hawk!",
   "author": "Steve Viselli",
   "private": "true",
   "main": "app.js",
@@ -9,14 +9,11 @@
     "update-hawk-db": "./bin/update-hawk-db"
   },
   "scripts": {
-    "watch": "watchify app.js -o public/js/bundle.js -v",
-    "browserify": "browserify app.js | uglifyjs > public/js/bundle.js",
-    "build": "npm run browserify ",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run watch & nodemon --harmony server.js",
-    "start": "npm run build && NODE_ENV=production forever start --uid \"hawk\" -c \"node --harmony\" -a server.js",
+    "build": "npm install && gulp build",
+    "forever": "NODE_ENV=production forever start --uid \"hawk\" -c \"node --harmony\" -a server.js",
+    "start": "npm run build && npm run forever",
     "stop": "forever stop hawk",
-    "update": "git pull && npm run stop && npm install && npm run start"
+    "update": "git pull && npm run stop && npm run start"
   },
   "repository": {
     "type": "git",
@@ -31,18 +28,41 @@
     "koa-response-time": "^1.0.2",
     "koa-router": "^4.2.0",
     "koa-static": "^1.4.9",
+    "koa-static-cache": "^3.0.1",
     "koa-views": "^2.1.2",
     "mongoose": "^4.0.0-rc2",
     "pg": "^4.2.0",
     "react": "^0.12.2",
+    "ssh2": "^0.4.4",
     "winston": "^0.9.0",
     "yargs": "^3.2.1"
   },
   "devDependencies": {
     "browserify": "^8.1.3",
+    "del": "^1.1.1",
+    "envify": "^3.2.0",
+    "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-cache": "^0.2.8",
+    "gulp-concat": "^2.5.2",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.2.0",
+    "gulp-jshint": "^1.9.2",
+    "gulp-livereload": "^3.7.0",
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-minify-css": "^0.4.6",
+    "gulp-nodemon": "^1.0.5",
+    "gulp-notify": "^2.2.0",
+    "gulp-ruby-sass": "^1.0.0-alpha.3",
+    "gulp-streamify": "0.0.5",
+    "gulp-uglify": "^1.1.0",
+    "gulp-useref": "^1.1.1",
+    "gulp-util": "^3.0.3",
+    "koa-livereload": "^0.1.23",
     "nodemon": "^1.3.7",
     "reactify": "^1.0.0",
     "uglify-js": "^2.4.16",
+    "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.3.0"
   },
   "browserify": {
