Record stats like new artists and new releases when updating the Hawk database, and send them in the notification and store them in MongoDB. Also added some better error handling and recovery and checks around when to update the Postgres database. Did a bit of really basic UI stuff, added a grid and a search box and fixed SCSS live re-compiling.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "koa-static": "^1.4.9",
     "koa-static-cache": "^3.0.1",
     "koa-views": "^2.1.2",
+    "lodash": "^3.3.1",
     "mongoose": "^4.0.0-rc2",
     "pg": "^4.2.0",
     "react": "^0.12.2",
