Replace forever with PM2 for process management, wrap the update DB job in a cron job to run it every day, and add dynamic config based on node_env.

--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "update-hawk-db": "./bin/update-hawk-db"
   },
   "scripts": {
-    "build": "npm install && gulp build",
-    "forever": "NODE_ENV=production forever start --uid \"hawk\" -c \"node --harmony\" -a server.js",
-    "start": "npm run build && npm run forever",
-    "stop": "forever stop hawk",
-    "update": "git pull && npm run stop && npm run start"
+    "build": "npm install && bower install && gulp build",
+    "pm2": "pm2 startOrReload ecosystem.json --env production",
+    "start": "npm run build && npm run pm2",
+    "stop": "pm2 stop ecosystem.json && pm2 delete ecosystem.json",
+    "update": "git pull && npm run build && npm run pm2",
+    "deploy": "pm2 deploy production"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "aws-sdk": "^2.1.12",
+    "cron": "^1.0.8",
     "koa": "^0.18.0",
     "koa-error": "^1.1.3",
     "koa-logger": "^1.2.2",
