--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
   },
   "devDependencies": {
     "browserify": "^8.1.3",
+    "concurrent-transform": "^1.0.0",
     "del": "^1.1.1",
     "envify": "^3.2.0",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-awspublish": "^1.0.5",
     "gulp-cache": "^0.2.8",
     "gulp-concat": "^2.5.2",
     "gulp-if": "^1.2.5",
@@ -58,6 +60,9 @@
     "gulp-minify-css": "^0.4.6",
     "gulp-nodemon": "^1.0.5",
     "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-replace": "^0.5.3",
+    "gulp-rev-all": "^0.7.6",
     "gulp-ruby-sass": "^1.0.0-alpha.3",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
@@ -66,6 +71,7 @@
     "koa-livereload": "^0.1.23",
     "nodemon": "^1.3.7",
     "reactify": "^1.0.0",
+    "shortid": "^2.1.3",
     "uglify-js": "^2.4.16",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.3.0"
