--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "async": "^0.9.0",
     "aws-sdk": "^2.1.12",
     "cron": "^1.0.8",
+    "handlebars": "^3.0.0",
     "koa": "^0.18.0",
     "koa-error": "^1.1.3",
     "koa-logger": "^1.2.2",
@@ -36,8 +37,10 @@
     "koa-views": "^2.1.2",
     "lodash": "^3.3.1",
     "mongoose": "^4.0.0-rc2",
+    "node-jsx": "^0.12.4",
     "pg": "^4.2.0",
     "react": "^0.12.2",
+    "react-router": "^0.12.4",
     "ssh2": "^0.4.4",
     "winston": "^0.9.0",
     "yargs": "^3.2.1"
