--- a/package.json
+++ b/package.json
@@ -25,11 +25,17 @@
   "dependencies": {
     "async": "^0.9.0",
     "aws-sdk": "^2.1.12",
+    "co": "^4.4.0",
+    "co-bcrypt": "^1.0.0",
     "cron": "^1.0.8",
     "handlebars": "^3.0.0",
     "koa": "^0.18.0",
+    "koa-body": "^1.1.0",
     "koa-error": "^1.1.3",
+    "koa-generic-session": "^1.7.0",
+    "koa-generic-session-mongo": "^0.1.1",
     "koa-logger": "^1.2.2",
+    "koa-passport": "^1.1.4",
     "koa-response-time": "^1.0.2",
     "koa-router": "^4.2.0",
     "koa-static-cache": "^3.0.1",
@@ -37,10 +43,14 @@
     "lodash": "^3.3.1",
     "mongoose": "^4.0.0-rc2",
     "node-jsx": "^0.12.4",
+    "passport-facebook": "^2.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^4.2.0",
     "react": "^0.12.2",
     "react-router": "^0.12.4",
     "ssh2": "^0.4.4",
+    "superagent": "^0.21.0",
+    "validator": "^3.33.0",
     "winston": "^0.9.0",
     "yargs": "^3.2.1"
   },
