--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "co": "^4.4.0",
     "co-bcrypt": "^1.0.0",
     "cron": "^1.0.8",
+    "flux": "^2.0.1",
     "handlebars": "^3.0.0",
     "koa": "^0.18.0",
     "koa-body": "^1.1.0",
@@ -43,10 +44,13 @@
     "lodash": "^3.3.1",
     "mongoose": "^4.0.0-rc2",
     "node-jsx": "^0.12.4",
+    "object-assign": "^2.0.0",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^4.2.0",
     "react": "^0.12.2",
+    "react-imageloader": "^1.1.2",
+    "react-loadermixin": "^1.0.4",
     "react-router": "^0.12.4",
     "ssh2": "^0.4.4",
     "superagent": "^0.21.0",
