--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "foundation": "~5.5.1",
-    "fontawesome": "~4.3.0"
+    "fontawesome": "~4.3.0",
+    "sticky": "~1.0.1"
   }
 }
