--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "koa-static-cache": "^3.0.1",
     "koa-views": "^3.0.0",
     "lodash": "^3.3.1",
+    "moment": "^2.9.0",
     "mongoose": "^4.0.0-rc2",
     "node-jsx": "^0.12.4",
     "object-assign": "^2.0.0",
@@ -54,6 +55,7 @@
     "react-router": "^0.12.4",
     "ssh2": "^0.4.4",
     "superagent": "^1.1.0",
+    "underscore.string": "^3.0.3",
     "validator": "^3.33.0",
     "winston": "^0.9.0",
     "yargs": "^3.2.1"
