--- a/.jshintrc
+++ b/.jshintrc
@@ -14,6 +14,7 @@
   "newcap": true,
   "noarg": true,
   "node": true,
+  "maxcomplexity": 6,
   "maxdepth": 3,
   "quotmark": "double",
   "undef": true,
