--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "koa": "^0.18.0",
     "koa-body": "^1.1.0",
     "koa-error": "^1.1.3",
-    "koa-generic-session": "^1.7.0",
-    "koa-generic-session-mongo": "^0.1.1",
+    "koa-generic-session": "^1.8.0",
     "koa-logger": "^1.2.2",
     "koa-passport": "^1.1.4",
     "koa-response-time": "^1.0.2",
     "koa-router": "^4.2.0",
+    "koa-session-mongoose": "^0.5.0",
     "koa-static-cache": "^3.0.1",
     "koa-views": "^3.0.0",
     "lodash": "^3.3.1",
