--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hawk",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Watch your favorite bands like a hawk!",
   "author": "Steve Viselli",
   "private": "true",
@@ -30,7 +30,7 @@
     "cron": "^1.0.8",
     "flux": "^2.0.1",
     "handlebars": "^3.0.0",
-    "koa": "^0.18.0",
+    "koa": "^0.20.0",
     "koa-body": "^1.1.0",
     "koa-error": "^1.1.3",
     "koa-generic-session": "^1.8.0",
@@ -43,46 +43,46 @@
     "koa-views": "^3.0.0",
     "lodash": "^3.3.1",
     "moment": "^2.9.0",
-    "mongoose": "^4.0.0-rc2",
-    "node-jsx": "^0.12.4",
+    "mongoose": "^4.0.2",
+    "node-jsx": "^0.13.3",
     "object-assign": "^2.0.0",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^4.2.0",
-    "react": "^0.12.2",
+    "react": "^0.13.2",
     "react-imageloader": "^1.1.2",
     "react-loadermixin": "^1.0.4",
-    "react-router": "^0.12.4",
+    "react-router": "^0.13.3",
     "ssh2": "^0.4.4",
     "superagent": "^1.1.0",
     "underscore.string": "^3.0.3",
     "validator": "^3.33.0",
-    "winston": "^0.9.0",
+    "winston": "^1.0.0",
     "yargs": "^3.2.1"
   },
   "devDependencies": {
-    "browserify": "^9.0.3",
+    "browserify": "^10.1.0",
     "concurrent-transform": "^1.0.0",
     "del": "^1.1.1",
     "envify": "^3.2.0",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
-    "gulp-awspublish": "^1.0.5",
+    "gulp-awspublish": "^2.0.0",
     "gulp-cache": "^0.2.8",
     "gulp-concat": "^2.5.2",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.0",
     "gulp-jshint": "^1.9.2",
     "gulp-livereload": "^3.7.0",
-    "gulp-load-plugins": "^0.8.0",
+    "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.0.0",
-    "gulp-nodemon": "^1.0.5",
+    "gulp-nodemon": "^2.0.3",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.3",
-    "gulp-rev-all": "^0.7.6",
+    "gulp-rev-all": "^0.8.18",
     "gulp-ruby-sass": "^1.0.0-alpha.3",
-    "gulp-streamify": "0.0.5",
+    "gulp-streamify": "^0.0.5",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^1.1.1",
     "gulp-util": "^3.0.3",
@@ -92,6 +92,6 @@
     "shortid": "^2.1.3",
     "uglify-js": "^2.4.16",
     "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.4.0"
+    "watchify": "^3.2.1"
   }
 }
