--- a/package.json
+++ b/package.json
@@ -23,21 +23,21 @@
     "url": "https://github.com/stevevis/hawk"
   },
   "dependencies": {
-    "async": "^0.9.0",
+    "async": "^1.4.2",
     "aws-sdk": "^2.1.17",
     "co": "^4.4.0",
     "co-bcrypt": "^1.0.0",
     "cron": "^1.0.8",
     "flux": "^2.0.1",
     "handlebars": "^3.0.0",
-    "koa": "^0.20.0",
+    "koa": "^0.21.0",
     "koa-body": "^1.1.0",
     "koa-error": "^1.1.3",
     "koa-generic-session": "^1.8.0",
     "koa-logger": "^1.2.2",
     "koa-passport": "^1.1.4",
     "koa-response-time": "^1.0.2",
-    "koa-router": "^4.2.0",
+    "koa-router": "^5.1.2",
     "koa-session-mongoose": "^0.5.0",
     "koa-static-cache": "^3.0.1",
     "koa-views": "^3.0.0",
@@ -45,26 +45,30 @@
     "moment": "^2.9.0",
     "mongoose": "^4.0.2",
     "node-jsx": "^0.13.3",
-    "object-assign": "^2.0.0",
+    "object-assign": "^2.1.1",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^4.2.0",
     "react": "^0.13.2",
-    "react-imageloader": "^1.1.2",
+    "react-imageloader": "^2.0.0",
     "react-loadermixin": "^1.0.4",
     "react-router": "^0.13.3",
     "ssh2": "^0.4.4",
     "superagent": "^1.1.0",
     "underscore.string": "^3.0.3",
-    "validator": "^3.33.0",
+    "validator": "^4.0.2",
     "winston": "^1.0.0",
     "yargs": "^3.2.1"
   },
   "devDependencies": {
-    "browserify": "^10.1.0",
+    "babel-eslint": "^4.0.5",
+    "babelify": "^6.1.3",
+    "browserify": "^11.0.1",
     "concurrent-transform": "^1.0.0",
     "del": "^1.1.1",
     "envify": "^3.2.0",
+    "eslint": "^1.1.0",
+    "eslint-plugin-react": "^3.2.2",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-awspublish": "^2.0.0",
@@ -72,7 +76,6 @@
     "gulp-concat": "^2.5.2",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.0",
-    "gulp-jshint": "^1.9.2",
     "gulp-livereload": "^3.7.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.0.0",
@@ -82,7 +85,7 @@
     "gulp-replace": "^0.5.3",
     "gulp-rev-all": "^0.8.18",
     "gulp-ruby-sass": "^1.0.0-alpha.3",
-    "gulp-streamify": "^0.0.5",
+    "gulp-streamify": "^1.0.0",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^1.1.1",
     "gulp-util": "^3.0.3",
