--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Watch your favorite bands like a hawk!",
   "author": "Steve Viselli",
   "private": "true",
-  "main": "src/app.js",
+  "main": "src/app.jsx",
   "bin": {
     "update-hawk-db": "./bin/update-hawk-db"
   },
   "scripts": {
     "build": "npm install && bower install && gulp build",
     "pm2": "pm2 startOrReload ecosystem.json --env production",
-    "start": "npm run build && npm run pm2",
+    "start": "NODE_ENV=production npm run build && npm run pm2",
     "stop": "pm2 stop ecosystem.json && pm2 delete ecosystem.json",
     "update": "git pull && npm run build && npm run pm2",
     "deploy": "pm2 deploy production",
@@ -25,6 +25,7 @@
   "dependencies": {
     "async": "^1.4.2",
     "aws-sdk": "^2.1.17",
+    "babel": "^5.8.21",
     "co": "^4.4.0",
     "co-bcrypt": "^1.0.0",
     "cron": "^1.0.8",
@@ -44,8 +45,7 @@
     "lodash": "^3.3.1",
     "moment": "^2.9.0",
     "mongoose": "^4.0.2",
-    "node-jsx": "^0.13.3",
-    "object-assign": "^2.1.1",
+    "object-assign": "^3.0.0",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^4.2.0",
@@ -85,6 +85,7 @@
     "gulp-replace": "^0.5.3",
     "gulp-rev-all": "^0.8.18",
     "gulp-ruby-sass": "^1.0.0-alpha.3",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-streamify": "^1.0.0",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^1.1.1",
@@ -92,8 +93,10 @@
     "koa-livereload": "^0.1.23",
     "nodemon": "^1.3.7",
     "reactify": "^1.0.0",
+    "require-dir": "^0.3.0",
     "shortid": "^2.1.3",
     "uglify-js": "^2.4.16",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^3.2.1"
   }
