--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "foundation": "~5.5.1",
+    "foundation": "5.5.1",
     "fontawesome": "~4.3.0",
     "sticky": "~1.0.1"
   }
