--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "hawk",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Watch your favorite bands like a hawk!",
   "author": "Steve Viselli",
   "private": "true",
-  "main": "src/app.js",
+  "main": "app/app.jsx",
   "bin": {
     "update-hawk-db": "./bin/update-hawk-db"
   },
   "scripts": {
-    "build": "npm install && bower install && gulp build",
+    "build": "npm install && NODE_ENV=production gulp build",
     "pm2": "pm2 startOrReload ecosystem.json --env production",
     "start": "npm run build && npm run pm2",
     "stop": "pm2 stop ecosystem.json && pm2 delete ecosystem.json",
@@ -23,75 +23,53 @@
     "url": "https://github.com/stevevis/hawk"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "aws-sdk": "^2.1.17",
-    "co": "^4.4.0",
-    "co-bcrypt": "^1.0.0",
-    "cron": "^1.0.8",
-    "flux": "^2.0.1",
-    "handlebars": "^3.0.0",
-    "koa": "^0.20.0",
-    "koa-body": "^1.1.0",
-    "koa-error": "^1.1.3",
-    "koa-generic-session": "^1.8.0",
-    "koa-logger": "^1.2.2",
-    "koa-passport": "^1.1.4",
-    "koa-response-time": "^1.0.2",
-    "koa-router": "^4.2.0",
-    "koa-session-mongoose": "^0.5.0",
-    "koa-static-cache": "^3.0.1",
-    "koa-views": "^3.0.0",
-    "lodash": "^3.3.1",
-    "moment": "^2.9.0",
-    "mongoose": "^4.0.2",
-    "node-jsx": "^0.13.3",
-    "object-assign": "^2.0.0",
-    "passport-facebook": "^2.0.0",
-    "passport-local": "^1.0.0",
-    "pg": "^4.2.0",
-    "react": "^0.13.2",
-    "react-imageloader": "^1.1.2",
-    "react-loadermixin": "^1.0.4",
-    "react-router": "^0.13.3",
-    "ssh2": "^0.4.4",
-    "superagent": "^1.1.0",
-    "underscore.string": "^3.0.3",
-    "validator": "^3.33.0",
-    "winston": "^1.0.0",
-    "yargs": "^3.2.1"
+    "alt": "^0.18.5",
+    "handlebars": "^4.0.5",
+    "history": "^4.0.0-1",
+    "koa": "^1.2.4",
+    "koa-views": "^4.1.0",
+    "lodash": "^4.15.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-router": "^2.7.0"
   },
   "devDependencies": {
-    "browserify": "^10.1.0",
+    "babel-core": "^6.14.0",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-1": "^6.13.0",
+    "babel-register": "^6.14.0",
+    "bootstrap": "4.0.0-alpha.4",
     "concurrent-transform": "^1.0.0",
-    "del": "^1.1.1",
-    "envify": "^3.2.0",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-awspublish": "^2.0.0",
-    "gulp-cache": "^0.2.8",
-    "gulp-concat": "^2.5.2",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.2.0",
-    "gulp-jshint": "^1.9.2",
-    "gulp-livereload": "^3.7.0",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-nodemon": "^2.0.3",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-replace": "^0.5.3",
-    "gulp-rev-all": "^0.8.18",
-    "gulp-ruby-sass": "^1.0.0-alpha.3",
-    "gulp-streamify": "^0.0.5",
-    "gulp-uglify": "^1.1.0",
-    "gulp-useref": "^1.1.1",
-    "gulp-util": "^3.0.3",
-    "koa-livereload": "^0.1.23",
-    "nodemon": "^1.3.7",
-    "reactify": "^1.0.0",
-    "shortid": "^2.1.3",
-    "uglify-js": "^2.4.16",
-    "vinyl-source-stream": "^1.0.0",
-    "watchify": "^3.2.1"
+    "css-loader": "^0.25.0",
+    "eslint": "^3.4.0",
+    "eslint-plugin-react": "^6.2.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "gulp": "^3.9.1",
+    "gulp-awspublish": "^3.3.0",
+    "gulp-eslint": "^3.0.1",
+    "gulp-inject": "^4.1.0",
+    "gulp-inject-string": "^1.1.0",
+    "gulp-nodemon": "^2.1.0",
+    "gulp-util": "^3.0.7",
+    "jquery": "^3.1.0",
+    "node-sass": "^3.9.3",
+    "nodemon": "^1.10.2",
+    "require-dir": "^0.3.0",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.2",
+    "script-loader": "^0.7.0",
+    "style-loader": "^0.13.1",
+    "tether": "^1.3.7",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.15.1",
+    "webpack-hot-middleware": "^2.12.2"
   }
 }
